--- a/Builds/VisualStudio2019/ExpressionSynth_SharedCode.vcxproj.filters
+++ b/Builds/VisualStudio2019/ExpressionSynth_SharedCode.vcxproj.filters
@@ -607,6 +607,15 @@
     <ClCompile Include="..\..\Source\PluginEditor.cpp">
       <Filter>ExpressionSynth\Source</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\VoiceChannel.cpp">
+      <Filter>ExpressionSynth\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\SSound.cpp">
+      <Filter>ExpressionSynth\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Program Files\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.cpp">
+      <Filter>JUCE Modules\juce_audio_basics\audio_play_head</Filter>
+    </ClCompile>
     <ClCompile Include="C:\Program Files\JUCE\modules\juce_audio_basics\buffers\juce_AudioChannelSet.cpp">
       <Filter>JUCE Modules\juce_audio_basics\buffers</Filter>
     </ClCompile>
@@ -620,6 +629,9 @@
       <Filter>JUCE Modules\juce_audio_basics\buffers</Filter>
     </ClCompile>
     <ClCompile Include="C:\Program Files\JUCE\modules\juce_audio_basics\midi\ump\juce_UMP_test.cpp">
+      <Filter>JUCE Modules\juce_audio_basics\midi\ump</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Program Files\JUCE\modules\juce_audio_basics\midi\ump\juce_UMPIterator.cpp">
       <Filter>JUCE Modules\juce_audio_basics\midi\ump</Filter>
     </ClCompile>
     <ClCompile Include="C:\Program Files\JUCE\modules\juce_audio_basics\midi\ump\juce_UMPMidi1ToMidi2DefaultTranslator.cpp">
@@ -692,6 +704,9 @@
       <Filter>JUCE Modules\juce_audio_basics\sources</Filter>
     </ClCompile>
     <ClCompile Include="C:\Program Files\JUCE\modules\juce_audio_basics\sources\juce_MixerAudioSource.cpp">
+      <Filter>JUCE Modules\juce_audio_basics\sources</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Program Files\JUCE\modules\juce_audio_basics\sources\juce_PositionableAudioSource.cpp">
       <Filter>JUCE Modules\juce_audio_basics\sources</Filter>
     </ClCompile>
     <ClCompile Include="C:\Program Files\JUCE\modules\juce_audio_basics\sources\juce_ResamplingAudioSource.cpp">
@@ -1465,6 +1480,9 @@
     <ClCompile Include="C:\Program Files\JUCE\modules\juce_audio_processors\utilities\juce_RangedAudioParameter.cpp">
       <Filter>JUCE Modules\juce_audio_processors\utilities</Filter>
     </ClCompile>
+    <ClCompile Include="C:\Program Files\JUCE\modules\juce_audio_processors\utilities\juce_VSTCallbackHandler.cpp">
+      <Filter>JUCE Modules\juce_audio_processors\utilities</Filter>
+    </ClCompile>
     <ClCompile Include="C:\Program Files\JUCE\modules\juce_audio_processors\juce_audio_processors.cpp">
       <Filter>JUCE Modules\juce_audio_processors</Filter>
     </ClCompile>
@@ -1893,6 +1911,9 @@
     </ClCompile>
     <ClCompile Include="C:\Program Files\JUCE\modules\juce_data_structures\app_properties\juce_PropertiesFile.cpp">
       <Filter>JUCE Modules\juce_data_structures\app_properties</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Program Files\JUCE\modules\juce_data_structures\undomanager\juce_UndoableAction.cpp">
+      <Filter>JUCE Modules\juce_data_structures\undomanager</Filter>
     </ClCompile>
     <ClCompile Include="C:\Program Files\JUCE\modules\juce_data_structures\undomanager\juce_UndoManager.cpp">
       <Filter>JUCE Modules\juce_data_structures\undomanager</Filter>
@@ -2863,6 +2884,9 @@
     <ClCompile Include="C:\Program Files\JUCE\modules\juce_gui_basics\windows\juce_TopLevelWindow.cpp">
       <Filter>JUCE Modules\juce_gui_basics\windows</Filter>
     </ClCompile>
+    <ClCompile Include="C:\Program Files\JUCE\modules\juce_gui_basics\windows\juce_VBlankAttachement.cpp">
+      <Filter>JUCE Modules\juce_gui_basics\windows</Filter>
+    </ClCompile>
     <ClCompile Include="C:\Program Files\JUCE\modules\juce_gui_basics\juce_gui_basics.cpp">
       <Filter>JUCE Modules\juce_gui_basics</Filter>
     </ClCompile>
@@ -2915,6 +2939,9 @@
       <Filter>JUCE Modules\juce_gui_extra\misc</Filter>
     </ClCompile>
     <ClCompile Include="C:\Program Files\JUCE\modules\juce_gui_extra\misc\juce_SystemTrayIconComponent.cpp">
+      <Filter>JUCE Modules\juce_gui_extra\misc</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Program Files\JUCE\modules\juce_gui_extra\misc\juce_WebBrowserComponent.cpp">
       <Filter>JUCE Modules\juce_gui_extra\misc</Filter>
     </ClCompile>
     <ClCompile Include="C:\Program Files\JUCE\modules\juce_gui_extra\native\juce_android_PushNotifications.cpp">
@@ -3028,6 +3055,15 @@
       <Filter>ExpressionSynth\Source</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\PluginEditor.h">
+      <Filter>ExpressionSynth\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\OscillatorFunctions.h">
+      <Filter>ExpressionSynth\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\VoiceChannel.h">
+      <Filter>ExpressionSynth\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\SSound.h">
       <Filter>ExpressionSynth\Source</Filter>
     </ClInclude>
     <ClInclude Include="C:\Program Files\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h">
@@ -3535,9 +3571,6 @@
       <Filter>JUCE Modules\juce_audio_formats\codecs\flac</Filter>
     </ClInclude>
     <ClInclude Include="C:\Program Files\JUCE\modules\juce_audio_formats\codecs\flac\stream_encoder.h">
-      <Filter>JUCE Modules\juce_audio_formats\codecs\flac</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\Program Files\JUCE\modules\juce_audio_formats\codecs\flac\win_utf8_io.h">
       <Filter>JUCE Modules\juce_audio_formats\codecs\flac</Filter>
     </ClInclude>
     <ClInclude Include="C:\Program Files\JUCE\modules\juce_audio_formats\codecs\oggvorbis\libvorbis-1.3.7\lib\books\coupled\res_books_51.h">
@@ -4573,6 +4606,9 @@
       <Filter>JUCE Modules\juce_core\native</Filter>
     </ClInclude>
     <ClInclude Include="C:\Program Files\JUCE\modules\juce_core\native\juce_mac_ObjCHelpers.h">
+      <Filter>JUCE Modules\juce_core\native</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\Program Files\JUCE\modules\juce_core\native\juce_native_ThreadPriorities.h">
       <Filter>JUCE Modules\juce_core\native</Filter>
     </ClInclude>
     <ClInclude Include="C:\Program Files\JUCE\modules\juce_core\native\juce_posix_IPAddress.h">
@@ -5628,6 +5664,9 @@
     <ClInclude Include="C:\Program Files\JUCE\modules\juce_gui_basics\native\accessibility\juce_win32_WindowsUIAWrapper.h">
       <Filter>JUCE Modules\juce_gui_basics\native\accessibility</Filter>
     </ClInclude>
+    <ClInclude Include="C:\Program Files\JUCE\modules\juce_gui_basics\native\x11\juce_linux_ScopedWindowAssociation.h">
+      <Filter>JUCE Modules\juce_gui_basics\native\x11</Filter>
+    </ClInclude>
     <ClInclude Include="C:\Program Files\JUCE\modules\juce_gui_basics\native\x11\juce_linux_X11_Symbols.h">
       <Filter>JUCE Modules\juce_gui_basics\native\x11</Filter>
     </ClInclude>
@@ -5635,6 +5674,9 @@
       <Filter>JUCE Modules\juce_gui_basics\native\x11</Filter>
     </ClInclude>
     <ClInclude Include="C:\Program Files\JUCE\modules\juce_gui_basics\native\juce_mac_CGMetalLayerRenderer.h">
+      <Filter>JUCE Modules\juce_gui_basics\native</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\Program Files\JUCE\modules\juce_gui_basics\native\juce_mac_PerScreenDisplayLinks.h">
       <Filter>JUCE Modules\juce_gui_basics\native</Filter>
     </ClInclude>
     <ClInclude Include="C:\Program Files\JUCE\modules\juce_gui_basics\native\juce_MultiTouchMapper.h">
@@ -5766,6 +5808,9 @@
     <ClInclude Include="C:\Program Files\JUCE\modules\juce_gui_basics\windows\juce_TopLevelWindow.h">
       <Filter>JUCE Modules\juce_gui_basics\windows</Filter>
     </ClInclude>
+    <ClInclude Include="C:\Program Files\JUCE\modules\juce_gui_basics\windows\juce_VBlankAttachement.h">
+      <Filter>JUCE Modules\juce_gui_basics\windows</Filter>
+    </ClInclude>
     <ClInclude Include="C:\Program Files\JUCE\modules\juce_gui_basics\juce_gui_basics.h">
       <Filter>JUCE Modules\juce_gui_basics</Filter>
     </ClInclude>
@@ -5875,9 +5920,6 @@
     </None>
     <None Include="C:\Program Files\JUCE\modules\juce_audio_formats\codecs\oggvorbis\Ogg Vorbis Licence.txt">
       <Filter>JUCE Modules\juce_audio_formats\codecs\oggvorbis</Filter>
-    </None>
-    <None Include="C:\Program Files\JUCE\modules\juce_audio_plugin_client\CMakeLists.txt">
-      <Filter>JUCE Modules\juce_audio_plugin_client</Filter>
     </None>
     <None Include="C:\Program Files\JUCE\modules\juce_audio_processors\format_types\LV2_SDK\README.md">
       <Filter>JUCE Modules\juce_audio_processors\format_types\LV2_SDK</Filter>
